<ui version="4.0" >
 <class>Qt1</class>
 <widget class="QDialog" name="Qt1" >
  <property name="geometry" >
   <rect>
    <x>0</x>
    <y>0</y>
    <width>514</width>
    <height>377</height>
   </rect>
  </property>
  <property name="windowTitle" >
   <string>Dialog</string>
  </property>
  <widget class="QPushButton" name="pbOK" >
   <property name="geometry" >
    <rect>
     <x>150</x>
     <y>130</y>
     <width>80</width>
     <height>28</height>
    </rect>
   </property>
   <property name="text" >
    <string>Add</string>
   </property>
  </widget>
  <widget class="QPushButton" name="pbExit" >
   <property name="geometry" >
    <rect>
     <x>160</x>
     <y>220</y>
     <width>80</width>
     <height>28</height>
    </rect>
   </property>
   <property name="text" >
    <string>exit</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="le1" >
   <property name="geometry" >
    <rect>
     <x>30</x>
     <y>70</y>
     <width>91</width>
     <height>28</height>
    </rect>
   </property>
  </widget>
  <widget class="QLineEdit" name="le2" >
   <property name="geometry" >
    <rect>
     <x>180</x>
     <y>70</y>
     <width>91</width>
     <height>28</height>
    </rect>
   </property>
  </widget>
  <widget class="QLineEdit" name="leRes" >
   <property name="geometry" >
    <rect>
     <x>340</x>
     <y>70</y>
     <width>91</width>
     <height>28</height>
    </rect>
   </property>
  </widget>
  <widget class="QLabel" name="label" >
   <property name="geometry" >
    <rect>
     <x>140</x>
     <y>80</y>
     <width>41</width>
     <height>18</height>
    </rect>
   </property>
   <property name="text" >
    <string>+</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_2" >
   <property name="geometry" >
    <rect>
     <x>300</x>
     <y>80</y>
     <width>31</width>
     <height>18</height>
    </rect>
   </property>
   <property name="text" >
    <string>=</string>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
